--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=urlshortener
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
-spring.datasource.username=dileep
-spring.datasource.password=dileep
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
